<resources>
    <string name="app_name">重逢</string>

    <string name="tencent_ai_app_key">ptWTkIRx0yPw3J5A</string>
    <string name="tencent_ai_app_id">2123552337</string>

    <string name="login_text">Reunion</string>
    <string name="login_phone">手机号登录</string>
    <string name="login_authorize">微信登录</string>
    <string name="login_code">获取验证码</string>
    <string name="login_phone_edit">请输入您的手机号</string>
    <string name="login_proto_agree">登录即代表您同意</string>
    <string name="login_user_proto">《用户协议》</string>
    <string name="login_privacy_proto">《隐私政策》</string>

    <string name="log_code_edit">输入验证码</string>
    <string name="log_phone_title">请输入验证码</string>
    <string name="log_phone_text">验证码已通过短信发送至</string>
    <string name="log_phone_login">登录</string>
    <string name="log_phone_fail">收不到验证码？</string>

    <string-array name="phoneSpinner">
        <item>+86</item>
    </string-array>

    <string name="menu_home">首页</string>
    <string name="menu_community">重逢圈</string>
    <string name="menu_mine">我的</string>
    <string name="menu_message">消息</string>

    <string name="home_follow">关注</string>
    <string name="home_recommend">推荐</string>
    <string name="home_nearby">附近</string>
    <string name="home_find">寻人</string>
    <string name="home_news">新闻</string>
    <string name="home_claim">认领</string>

    <string name="sex_0">保密</string>
    <string name="sex_1">男</string>
    <string name="sex_2">女</string>


    <string-array name="newsTitle">
        <item>健康</item>
        <item>育儿</item>
        <item>公益</item>
    </string-array>

    <string-array name="userTitle">
        <item>关注</item>
        <item>粉丝</item>
    </string-array>

    <string name="more_load_no">上拉加载更多</string>
    <string name="more_load_ok">松手加载</string>
    <string name="more_load_start">正在加载中</string>
    <string name="more_load_up">下拉加载更多</string>

    <string name="load_all">全部加载了</string>
    <string name="fail_refresh">刷新失败</string>
    <string name="fail_load">加载失败</string>

    <string name="comment_send">发送</string>
    <string name="comment_success">评论成功</string>
    <string name="comment_edit">写评论…</string>
    <string name="comment_no">已经显示全部评论</string>
    <string name="comment_load">评论正在加载…</string>
    <string name="comment_more">点击加载更多评论</string>
    <string name="reply_all">全部评论</string>
    <string name="reply_user">回复</string>

    <string name="no_login">未登录</string>
    <string name="signature">简介</string>
    <string name="mine_follow">关注</string>
    <string name="mine_star">收藏</string>
    <string name="mine_history">历史</string>
    <string name="mine_homepage">个人主页</string>
    <string name="mine_faceManager">我的人脸管理</string>
    <string name="mine_send">我发布的</string>
    <string name="mine_setting">设置</string>

    <string name="setting_account">账号与安全</string>
    <string name="setting_message">个人资料</string>
    <string name="setting_normal">通用</string>
    <string name="setting_homepage">首页管理</string>
    <string name="setting_help">帮助</string>
    <string name="setting_exit">退出</string>
    <string name="setting_approve">基本信息</string>
    <string name="setting_basic">认证信息</string>
    <string name="setting_save">保存</string>

    <string name="setting_logout">退出当前账号</string>
    <string name="setting_clear_cache">清空缓存</string>
    <string name="setting_clear_im">清空聊天记录</string>
    <string name="setting_clear_system">清空系统消息</string>

    <string name="setting_header">头像</string>
    <string name="setting_name">昵称</string>
    <string name="setting_real_name">姓名</string>
    <string name="setting_signature">简介</string>
    <string name="setting_sex">性别</string>
    <string name="setting_birthday">生日</string>
    <string name="setting_area">常住</string>
    <string name="setting_uid">UID</string>
    <string name="setting_qq">QQ</string>
    <string name="setting_we_chat">微信</string>
    <string name="setting_phone">手机号</string>
    <string name="setting_check_version">版本更新</string>
    <string name="setting_newest_version">已是最新版本</string>
    <string name="setting_advice">反馈和建议</string>
    <string name="setting_advice_edit">请输入遇到的问题或建议</string>
    <string name="setting_advice_phone_text">联系电话</string>
    <string name="setting_advice_phone">选填，便于我们联系您</string>
    <string name="setting_advice_submit">提交</string>
    <string name="setting_proto">《服务条例》</string>

    <string name="setting_home_content">首页内容</string>

    <string name="camera_photo">相册</string>
    <string name="face_loading">正在检测中..</string>

    <string name="face_text_success">恭喜您,检测通过！</string>
    <string name="face_text_inaccurate">未检测到人脸,请重试</string>
    <string name="face_text_error">发生未知错误</string>

    <string name="face_button_success">立即寻人</string>
    <string name="face_button_inaccurate">重新尝试</string>
    <string name="face_button_cut">裁剪图像</string>

    <string name="find_title">扫脸结果</string>
    <string name="finding">正在寻人..</string>

    <string name="picture_compressing">正在压缩图片..</string>
    <string name="picture_uploading">正在上传图片..</string>
    <string name="picture_upload">正在上传图片</string>

    <string name="dialog_use_camera">使用相机</string>
    <string name="dialog_use_photo">使用相册</string>
    <string name="dialog_cancel">取消</string>

    <string name="send_find_body">发布认领启事</string>
    <string name="send_find_body_content">快来认领丢失的东西</string>
    <string name="send_find_people">发布寻人</string>
    <string name="send_find_people_content">让大家一起帮助你寻人</string>
    <string name="find_face">扫脸寻人</string>
    <string name="find_face_content">通过扫脸识别，查询用户信息</string>

    <string name="face_mg_title">我的人脸管理</string>
    <string name="face_delete_cancel">取消</string>
    <string name="face_delete_all_cancel">取消全选</string>
    <string name="face_delete_all">全选</string>
    <string name="face_delete_ok">删除</string>
    <string name="face_dialog_ok">确定</string>
    <string name="face_delete_button">删除人脸信息</string>
    <string name="face_create_button">录入人脸信息</string>

    <string name="face_on_click_message">每位用户最多可以录入5张人脸信息，请先删除现有的再录入</string>
    <string name="face_load_delete">正在删除中,请稍等</string>
    <string name="compressing">正在处理图片中,请稍等</string>

    <string name="send_find_people_title">发布寻人</string>
    <string name="send_find_people_time">失联时间</string>
    <string name="send_find_people_area">失联地点</string>
    <string name="send_find_people_age">失联人年龄</string>

    <string name="send_find_body_title">发布认领启事</string>
    <string name="send_find_body_time">时间</string>
    <string name="send_find_body_area">地点</string>
    <string name="send_find_body_age">年龄</string>

    <string name="send_topic_button">发布</string>
    <string name="send_topic_edit_title">请输入标题</string>
    <string name="send_topic_edit_content">添加详细描述</string>

    <string name="switch_background">切换到后台</string>
    <string name="map_help">你可以通过点击地图进行标记，通过地图上三个标记能够大致估计出你寻找对象的范围。</string>
    <string name="ok">我知道了</string>

    <string name="my_topic_people">寻人求助</string>
    <string name="my_topic_body">认领信息</string>
    <string name="my_topic_im">发送消息</string>
    <string name="my_topic_more">更多资料</string>
    <string name="my_topic_follow">关注</string>
    <string name="my_topic_follow_cancel">取消关注</string>
    <string name="my_topic_more_message">更多资料</string>

    <string name="community_follow">关注</string>
    <string name="community_community">重逢圈</string>
    <string name="community_mine">我的</string>

    <string name="topic_star">收藏</string>
    <string name="topic_star_cancel">取消收藏</string>
    <string name="topic_edit">编辑</string>
    <string name="topic_delete">删除</string>

    <string name="friend_title">我的好友</string>

    <string name="message_system">系统</string>
    <string name="message_im">消息</string>
    <string name="message_friend">联系人</string>

    <string name="insert_friend">添加朋友</string>
    <string name="insert_group">发起群聊</string>

    <string name="search_history">搜索历史</string>
    <string name="search_open">展开</string>
    <string name="search_close">收起</string>
    <string name="search_cancel">取消</string>
    <string name="search_clear">清空搜索历史</string>

    <string name="message_system_circle">1</string>
    <string name="message_im_error">!</string>

    <string name="community_send_title">发布重逢圈</string>
    <string name="community_send_hint">分享你的喜悦</string>
    <string name="community_send_loading">正在发布到重逢圈..</string>
    <string name="community_reply">回复</string>
    <string name="image_save">保存</string>
</resources>
