<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:id="@+id/moreLoadNo"
        android:layout_width="match_parent"
        android:layout_height="85dp">
        <TextView
            android:layout_marginTop="8dp"
            android:layout_gravity="center|top"
            android:text="@string/more_load_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </FrameLayout>
    <FrameLayout
        android:id="@+id/moreLoadOk"
        android:layout_width="match_parent"
        android:layout_height="85dp">
        <TextView
            android:layout_marginTop="8dp"
            android:layout_gravity="center|top"
            android:text="@string/more_load_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </FrameLayout>
    <FrameLayout
        android:id="@+id/moreLoadStart"
        android:layout_width="match_parent"
        android:layout_height="85dp">
        <TextView
            android:layout_marginTop="8dp"
            android:layout_gravity="center|top"
            android:text="@string/more_load_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </FrameLayout>
</LinearLayout>
