<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="activity"
            type="com.example.reunion.view.MyTopicActivity" />
        <variable
            name="viewModel"
            type="com.example.reunion.view_model.MyTopicViewModel" />
    </data>
    <LinearLayout
        android:layout_gravity="bottom"
        android:elevation="2dp"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:onClick="@{activity::onClickFollow}"
            android:visibility="@{viewModel.isMine(viewModel.uid)}"
            android:padding="10dp"
            android:gravity="center"
            android:background="@drawable/ripple_rect"
            android:textColor="@color/color_black"
            android:textSize="16sp"
            android:text="@{viewModel.getFollowString(viewModel.stateFollow)}"
            android:layout_width="match_parent"
            android:layout_height="44dp" />

        <TextView
            android:onClick="@{activity::onClickSendMessage}"
            android:visibility="@{viewModel.isMine(viewModel.uid)}"
            android:padding="10dp"
            android:gravity="center"
            android:background="@drawable/ripple_rect"
            android:textColor="@color/color_black"
            android:textSize="16sp"
            android:text="@string/my_topic_im"
            android:layout_width="match_parent"
            android:layout_height="44dp" />
        <TextView
            android:onClick="@{activity::onClickMoreMessage}"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="14dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:background="@drawable/ripple_rect"
            android:textColor="@color/color_black"
            android:textSize="16sp"
            android:text="@string/my_topic_more"
            android:layout_width="match_parent"
            android:layout_height="48dp" />
        <TextView
            android:onClick="@{activity::onClickCancelDialog}"
            android:padding="10dp"
            android:gravity="center"
            android:background="@drawable/ripple_rect"
            android:textColor="@color/color_black"
            android:textSize="16sp"
            android:text="@string/dialog_cancel"
            android:layout_width="match_parent"
            android:layout_height="44dp" />
    </LinearLayout>
</layout>
