<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.reunion.view_model.SettingViewModel" />
        <variable
            name="activity"
            type="com.example.reunion.view.SettingActivity" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:elevation="2dp"
            android:background="@color/color_white"
            android:layout_width="match_parent"
            android:layout_height="47dp">
            <ImageView
                android:layout_marginTop="@dimen/back_margin_top"
                android:layout_marginStart="@dimen/back_margin_start"
                android:onClick="@{activity::onBackClick}"
                android:background="@drawable/ripple_back_oval"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/fanhui"
                android:padding="2dp"
                android:layout_width="28dp"
                android:layout_height="28dp"/>
            <TextView
                android:textSize="16sp"
                android:textColor="@color/color_black"
                android:text="@string/setting_advice"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </FrameLayout>
        <androidx.cardview.widget.CardView
            android:layout_marginTop="21dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:textCursorDrawable="@drawable/edit_curor"
                    android:text="@={viewModel.fdContent}"
                    android:paddingStart="15dp"
                    android:paddingBottom="19dp"
                    android:paddingTop="19dp"
                    android:paddingEnd="15dp"
                    android:hint="@string/setting_advice_edit"
                    android:gravity="start|top"
                    android:lines="2"
                    android:maxLines="2"
                    android:background="@null"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <ImageView
                    app:uri="@{viewModel.fdUri}"
                    android:onClick="@{activity::onClickFeedBackPicture}"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="13dp"
                    android:src="@drawable/tianjia_2"
                    android:layout_width="79dp"
                    android:layout_height="79dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_marginTop="22dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_marginStart="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:text="@string/setting_advice_phone_text"
                    android:textColor="@color/color_black"
                    android:textSize="16sp"
                    />
                <EditText
                    android:textSize="16sp"
                    android:textCursorDrawable="@drawable/edit_curor"
                    android:text="@={viewModel.fdPhoneNumber}"
                    android:paddingStart="39dp"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="12dp"
                    android:hint="@string/setting_advice_phone"
                    android:gravity="start|top"
                    android:lines="1"
                    android:maxLines="1"
                    android:maxLength="11"
                    android:inputType="number"
                    android:background="@null"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <Button
            android:onClick="@{activity::onClickSendAdvice}"
            android:layout_marginTop="27dp"
            android:textSize="16sp"
            android:textColor="@color/color_white"
            android:text="@string/setting_advice_submit"
            android:background="@drawable/login_phone_button_ok"
            android:layout_gravity="center"
            android:layout_width="310dp"
            android:layout_height="42dp"/>
    </LinearLayout>
</layout>
