<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.reunion.view_model.SettingViewModel" />
        <variable
            name="activity"
            type="com.example.reunion.view.SettingActivity" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:elevation="2dp"
            android:background="@color/color_white"
            android:layout_width="match_parent"
            android:layout_height="47dp">
            <ImageView
                android:layout_marginTop="@dimen/back_margin_top"
                android:layout_marginStart="@dimen/back_margin_start"
                android:onClick="@{activity::onBackClick}"
                android:background="@drawable/ripple_back_oval"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/fanhui"
                android:padding="2dp"
                android:layout_width="28dp"
                android:layout_height="28dp"/>
            <TextView
                android:textSize="16sp"
                android:textColor="@color/color_black"
                android:text="@string/setting_homepage"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </FrameLayout>
        <FrameLayout
            android:layout_marginTop="14dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginStart="13dp"
                android:textSize="14sp"
                android:textColor="@color/color_black"
                android:text="@string/setting_home_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </FrameLayout>
        <LinearLayout
            android:paddingBottom="2dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <FrameLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <FrameLayout
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:elevation="2dp"
                    android:background="@{viewModel.getLabelColor(viewModel.checkRecommend)}"
                    android:onClick="@{viewModel::onSelectRecommend}"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_gravity="center"
                    android:layout_width="82dp"
                    android:layout_height="37dp">
                    <TextView
                        android:textColor="@{viewModel.getTextColor(viewModel.checkRecommend)}"
                        android:layout_gravity="center"
                        android:text="@string/home_recommend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </FrameLayout>
            </FrameLayout>
            <FrameLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:layout_width="82dp"
                    android:layout_height="37dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:background="@{viewModel.getLabelColor(viewModel.checkNearby)}"
                    android:clickable="true"
                    android:focusable="true"
                    android:elevation="2dp"
                    android:onClick="@{viewModel::onSelectNearby}">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/home_nearby"
                        android:textColor="@{viewModel.getTextColor(viewModel.checkNearby)}" />
                </FrameLayout>
            </FrameLayout>
            <FrameLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <FrameLayout
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:elevation="2dp"
                    android:background="@{viewModel.getLabelColor(viewModel.checkNews)}"
                    android:onClick="@{viewModel::onSelectNews}"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_gravity="center"
                    android:layout_width="82dp"
                    android:layout_height="37dp">
                    <TextView
                        android:textColor="@{viewModel.getTextColor(viewModel.checkNews)}"
                        android:layout_gravity="center"
                        android:text="@string/home_news"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </FrameLayout>
            </FrameLayout>
            <FrameLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <FrameLayout
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:elevation="2dp"
                    android:background="@{viewModel.getLabelColor(viewModel.checkFollw)}"
                    android:onClick="@{viewModel::onSelectFollw}"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_gravity="center"
                    android:layout_width="82dp"
                    android:layout_height="37dp">
                    <TextView
                        android:textColor="@{viewModel.getTextColor(viewModel.checkFollw)}"
                        android:layout_gravity="center"
                        android:text="@string/home_follow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </FrameLayout>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
