<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.reunion.view_model.SettingViewModel" />
        <variable
            name="activity"
            type="com.example.reunion.view.SettingActivity" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:elevation="2dp"
            android:background="@color/color_white"
            android:layout_width="match_parent"
            android:layout_height="47dp">
            <ImageView
                android:layout_marginTop="@dimen/back_margin_top"
                android:layout_marginStart="@dimen/back_margin_start"
                android:onClick="@{activity::onBackClick}"
                android:background="@drawable/ripple_back_oval"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/fanhui"
                android:padding="2dp"
                android:layout_width="28dp"
                android:layout_height="28dp"/>
            <TextView
                android:textSize="16sp"
                android:textColor="@color/color_black"
                android:text="@string/setting_help"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </FrameLayout>
        <ImageView
            android:src="@drawable/temp_icon"
            android:layout_marginTop="59dp"
            android:layout_gravity="center"
            android:layout_width="106dp"
            android:layout_height="106dp"/>
        <TextView
            android:layout_marginTop="47dp"
            android:layout_gravity="center"
            android:textSize="22sp"
            android:text="@string/app_name"
            android:textColor="@color/mainColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.cardview.widget.CardView
            app:cardElevation="2dp"
            app:cardCornerRadius="15dp"
            android:layout_marginTop="116dp"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <FrameLayout
                    android:foreground="@drawable/ripple_rect_borderless"
                    android:background="@color/color_white"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_width="match_parent"
                    android:layout_height="48dp">
                    <TextView
                        android:textSize="16sp"
                        android:textColor="@color/color_black"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="18dp"
                        android:text="@string/setting_check_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:textSize="12sp"
                        android:textColor="@color/button_cant_click"
                        android:layout_gravity="center_vertical|end"
                        android:layout_marginStart="18dp"
                        android:layout_marginEnd="19dp"
                        android:text="@string/setting_check_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </FrameLayout>
                <FrameLayout
                    android:foreground="@drawable/ripple_rect_borderless"
                    android:background="@color/color_white"
                    android:onClick="@{activity::showAdviceFragment}"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_width="match_parent"
                    android:layout_height="48dp">
                    <TextView
                        android:textSize="16sp"
                        android:textColor="@color/color_black"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="18dp"
                        android:text="@string/setting_advice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <ImageView
                        android:layout_gravity="end|center_vertical"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/point_right"
                        android:layout_width="22dp"
                        android:layout_height="22dp"/>
                </FrameLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_marginTop="140dp"
            android:layout_gravity="bottom|center"
            android:text="@string/setting_proto"
            android:textColor="@color/userProto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</layout>
